# aligned

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  ptr.rs  slice.rs
